# test_task

./: Dockerfile  README.md  pyproject.toml
apps/filesystem/: apps.py  exceptions.py  filesystem.py  tests.py  urls.py  utils.py  views.py
config/: settings.py  urls.py
